--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,16 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-    
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&family=Roboto:ital,wght@1,300&display=swap"
+    rel="stylesheet">
+
+  <meta charset="UTF-8">
+  <meta name="description" content="John's portfolio website made using React and Bootstrap">
+  <meta name="keywords" content="React, Bootstrap, John Nam, HTML, CSS, JavaScript">
+  <meta name="author" content="John Nam">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="icon" href="./Pictures/Dogs.jpg">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
